# taskcar-oficial

./: .gitignore
taskcar-motor-driver/: CMakeLists.txt  run.sh  sdkconfig  sdkconfig.old
taskcar-motor-driver/main/: CMakeLists.txt  Kconfig.projbuild  hello_world_main.c  main.c
taskcar-motor-driver/main/components/i2c_imu/: .i2c_imu.c.swp  CMakeLists.txt  i2c_imu.c  i2c_imu.h
taskcar-motor-driver/main/components/imu_driver/: mpu6050.c  mpu6050.h
taskcar-motor-driver/main/components/motor_driver/: CMakeLists.txt  motor_driver.c  motor_driver.h
taskcar-motor-driver/main/components/wifi_station/: CMakeLists.txt  wifi_station.c  wifi_station.h
taskcar-server/: go.mod  main.go
taskcar-server/client/: client.go
taskcar-server/config/: config.go
taskcar-server/data/: data.go
taskcar-server/network/: client.go  handler.go  network.go  security.go  serializable.go  server.go  tcp.go  utils.go
taskcar-server/server/: server.go  tcp.go
taskcar-server/stack/: stack.go
