idf_component_register(
                    SRCS
                    "main.c"
                    INCLUDE_DIRS 
                    "."
                    "components/motor_driver"
                    "components/imu_driver"
                    REQUIRES
                    motor_driver
                    imu_driver
                    driver)
